@@ -1,6 +1,7 @@
 45
 ================
 
+08/06/21 Vacc/Medical give buttons linked to wrong permission
 08/06/21 Never include generated timestamp in form preview
 08/06/21 Online form preview should respond to forenames/surname
 08/06/21 Select all icon in tables #533
